--- a/src/shared/ui/Button/ButtonComponent.scss
+++ b/src/shared/ui/Button/ButtonComponent.scss
@@ -5,7 +5,7 @@
   border: 1px solid $color--purple;
   font-family: Inter, sans-serif;
   font-weight: 700;
-  padding-block: 0.75rem;
+  padding-block: 1rem;
 }
 
 .Button:hover {
@@ -15,11 +15,9 @@
 
 .Button--header {
   width: 33.3%;
-  background: $color--white; /* как на макете — светлая/белая плашка */
+  background: $color--light-lavender;
   font-size: 1rem;
   color: $color--purple;
-  line-height: 1;
-  height: 44px;
 }
 
 .Button--header:first-child {
@@ -38,12 +36,12 @@
 }
 
 .Button--footer {
-  position: static; /* avoid overlapping tickets */
+  position: sticky;
+  bottom: 2rem;
   background: $color--purple;
   color: white;
   font-size: 1.5rem;
   border-radius: $border-radius--primary;
-  width: 100%;
 }
 
 .Button--aside {
@@ -83,7 +81,7 @@
   }
 
   .Button--footer {
-    position: static;
+    bottom: 1rem;
     background: $color--purple;
     color: white;
     font-size: 1.5rem;
