--- a/src/widgets/Main/ui/MainComponent.scss
+++ b/src/widgets/Main/ui/MainComponent.scss
@@ -40,6 +40,7 @@
   }
   .Main__aside-mobile {
     display: block;
+    width: 100%; /* Занимает всю ширину */
   }
   .Tickets {
     flex: 1 1 auto;
